fix: block scrolling on iOS

--- a/src/modules/pages/home/components/HomeReviews/HomeReviews.module.scss
+++ b/src/modules/pages/home/components/HomeReviews/HomeReviews.module.scss
@@ -28,6 +28,7 @@
   padding-right: 8px;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 
   @include media-tablet {
     margin-bottom: 40px;
